# bot

./: .descriptions.xml  .gitignore  .pre-commit-config.yaml  AGENT_PROMPT_SUMMARY.md  BROKEN.md  CHANGES_VERIFICATION.txt  COMPLETION_CHECKLIST.md  DATABASE_AUDIT_AGENT_PROMPT.md  DATABASE_AUDIT_QUICK_REFERENCE.md  DATABASE_AUDIT_REQUIREMENTS.md  DATABASE_AUDIT_REQUIREMENTS_SUMMARY.md  DATABASE_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_DETAILS.md  INDEX_AGENT_DELIVERABLES.md  LICENSE  PROMPT_COMPARISON.md  README.md  README_AGENT_PROMPT.md  README_DATABASE_FIXES.md  USAGE_INSTRUCTIONS.md  bot.py  docker-compose.yml  mysql_test.py  pyproject.toml  requirements.txt  ruff.toml  vending_machine_mealy
.cursor/plans/: 0.8.0_implementation_plan_c19999be.plan.md
.gemini/ralph/: state.json
.github/: mirror.yml
.github/workflows/: ci.yml  mirror.yml
api/: Arguments.py  Bot.py  Command.py  CommandTypes.py  Game.py  GameStateTypes.py  InputTypes.py  MatchOptions.py  MessageComponents.py  Player.py  Response.py  documentation.md
assets/icons/: README.md
cli/: analytics.py
cogs/: admin.py  events.py  games.py  general.py  matchmaking.py
configuration/: config.yaml.example  constants.py  emoji.yaml
configuration/locale/: en.toml
database/: functions.sql  schema.sql  seed.sql  views.sql
docs/: API.md  DATABASE.md  DATABASE_DECISIONS.md
games/: Battleship.py  BlackjackTable.py  Chess.py  CodenamesLite.py  ConnectFour.py  LiarsDice.py  MastermindDuel.py  Nim.py  NoThanks.py  Poker.py  Reversi.py  TestGame.py  TicTacToe.py  TicTacToeGame.py  TicTacToeV2.py
issues/: .descriptions.xml  PyArgumentListInspection.xml  PyBroadExceptionInspection.xml  PyTypeCheckerInspection.xml  PyUnresolvedReferencesInspection.xml
playcord/: __init__.py  __main__.py  state.py
playcord/api/: __init__.py  bot.py  handlers.py  match_options.py  metadata.py  plugin.py  trueskill_config.py
playcord/application/: container.py  errors.py  repositories.py  runtime_context.py
playcord/cli/: __main__.py  analytics.py
playcord/configuration/: display.toml  emoji.yaml
playcord/core/: __init__.py  errors.py  generators.py  match.py  player.py  rating.py  replay.py
playcord/database/: __init__.py  database.py  internal_player.py  models.py
playcord/discord_games/: __init__.py  arguments.py  bot.py  command.py  exceptions.py  game.py  match_options.py  message_components.py  player.py  response.py
playcord/display/: __init__.py  bot.py
playcord/domain/: __init__.py  bot.py  errors.py  game.py  handlers.py  match.py  match_options.py  player.py  rating.py  replay.py
playcord/games/: __init__.py  _common.py  api.py  exceptions.py  mafia.py  plugin.py  secret_hitler.py  tictactoe.py
playcord/games_impl/: ConnectFour.py  Nim.py  TicTacToe.py  __init__.py
playcord/infrastructure/: __init__.py  analytics_client.py  app_constants.py  config.py  constants.py  db_thread.py  locale.py  logging.py  runtime_config.py  system_metrics.py
playcord/logic/: __init__.py  about_command.py  catalog_command.py  container.py  errors.py  game_manager.py  match_interrupt.py  match_lifecycle.py  matchmaker.py  play_command.py  replay_viewer.py  role_management.py  runtime_context.py  stats_command.py  sync_command.py
playcord/presentation/: bot.py  discord_views.py
playcord/utils/: analytics.py  bot_owners.py  command_builder.py  command_tree_diff.py  containers.py  conversion.py  database.py  db_migrations.py  discord_utils.py  (+16 more)
strife_ui/: __init__.py  components.py  formatting.py  pagination.py  routing.py  screens.py
utils/: CommandType.py  CustomEmbed.py  Database.py  Game.py  GameInterface.py  GameState.py  GameStateTypes.py  GameView.py  InputTypes.py  Player.py  Property.py  TicTacToeGame.py  TicTacToeGameState.py  analytics.py  bot_names.py  bot_owners.py  command_builder.py  command_tree_diff.py  containers.py  conversion.py  database.py  database_new_version.py  db_migrations.py  discord_utils.py  embeds.py  emojis.py  formatter.py  game_interface.py  graphs.py  interface_lifecycle.py  interface_rendering.py  interfaces.py  locale.py  logging_config.py  match_codes.py  matchmaking_interface.py  matchmaking_user_map.py  models.py  new_database_setup.py  ramcheck.py  (+6 more)
(+158 files in other folders)
