[project]
name = "playcord"
version = "1.0.0"
description = "PlayCord is a discord bot for playing minigames."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Julian Reder" },
]
maintainers = [
    { name = "Julian Reder" }
]
keywords = ["discord-bot", "games", "playcord"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload"
]
dependencies = [
    "ruamel.yaml",
    "discord.py>=2.7",
    "emoji",
    "pillow",
    "psycopg[binary,pool]",
    "psutil",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]

[project.scripts]
playcord = "playcord.presentation.bot:main"

[project.urls]
Repository = "https://github.com/PlayCord/bot.git"
"Bug Tracker" = "https://github.com/PlayCord/bot/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"




[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
src = ["playcord"]

[tool.ruff.lint]
# Substantive cleanup rules from the deep audit (run: ruff check playcord --select …).
extend-select = ["B", "SIM", "UP", "C4", "PIE", "RUF", "PERF", "RET", "ARG"]
ignore = ["E501"]
